// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home.vue snapshots !isAuthenticated should match snapshot if !isAuthenticated 1`] = `
<div class="full-width">
  <login-stub></login-stub>
</div>
`;

exports[`Home.vue snapshots isAuthenticated should match snapshot if isAuthenticated true 1`] = `
<div class="full-width">
  <task-stub></task-stub>
</div>
`;
